trunk/Archive2/ee/cf8a896e4730a2/output
main.cpp:36:92: error: declaration of 'MessageStream<L>::~MessageStream() noexcept (false) [with MessageLevel L = (MessageLevel)1]' has a different exception specifier
         template<> MessageStream<MessageLevel::exception>::~MessageStream( ) noexcept(false) // [[noreturn]]
                                                                                            ^
main.cpp:16:13: error: from previous declaration 'MessageStream<L>::~MessageStream() noexcept [with MessageLevel L = (MessageLevel)1]'
             ~MessageStream( ); // noexcept(false);
             ^
